--- a/Css/style.css
+++ b/Css/style.css
@@ -49,6 +49,41 @@ html {
   background-color: cadetblue;
 }
 
+.fl-1
+{
+  flex: 1;
+}
+
+.fl-2
+{
+  flex: 2;
+}
+
+.fl-3
+{
+  flex: 3;
+}
+
+.fl-4
+{
+  flex: 4;
+}
+
+.fl-5
+{
+  flex: 5;
+}
+
+.fl-6
+{
+  flex: 6;
+}
+
+.fl-7
+{
+  flex: 7;
+}
+
 /*MAIN CONTENT*/
 .main-content
 {
@@ -103,17 +138,13 @@ html {
   font-size: 1.3rem;
   font-weight: 500;
   margin-top: 12px;
+  background-color: rgba(50, 145, 169,1);
+  align-self: flex-end;
 }
 
 .table-config:hover
 {
   opacity: 0.6;
-}
-
-#student-table-config
-{
-  background-color: rgba(50, 145, 169,1);
-  align-self: flex-end;
 }
 
 /*MODAL*/
@@ -151,11 +182,6 @@ html {
 {
   padding: 16px 8px;
   margin: 12px 0;
-}
-
-.modal-footer > .form-btn
-{
-
 }
 
 .modal-nav
@@ -218,6 +244,11 @@ html {
 }
 
 .add-form
+{
+  flex-flow: wrap;
+}
+
+.update-form
 {
   flex-flow: wrap;
 }
