--- a/Css/style.css
+++ b/Css/style.css
@@ -352,6 +352,7 @@ html {
   transform: translate(-50%, -50%);
   width: 100%;
   color: var(--secondary-color);
+  font-size: 1.7rem;
 
 }
 .header-right{
