--- a/Css/style.css
+++ b/Css/style.css
@@ -100,6 +100,14 @@ html {
   display: flex;
   flex-direction: column;
   position: relative;
+  width: 95%;
+  height: 100%;
+}
+
+.main{
+  width: 100%;
+  height: fit-content;
+  position: relative;
 }
 
 /*CONTENT TABLES*/
@@ -574,18 +582,13 @@ ul{
   color: var(--secondary-color);
 }
 
-/* Main view 1 */
-.main{
-  width: 100%;
-  height: 87%;
-}
 /* Sidebar */
 .sidebar{
   width: 5%;
   height: 100%;
   background-color: var(--secondary-color);
   color: white;
-  transition: linear 0.3s;
+  transition:  linear 0.5s;
 
 }
 /* Head sidebar: name and icon menu */
