--- a/Css/style.css
+++ b/Css/style.css
@@ -99,7 +99,6 @@ html {
 {
   display: flex;
   flex-direction: column;
-  position: relative;
   width: 95%;
   height: 100%;
 }
@@ -107,7 +106,6 @@ html {
 .main{
   width: 100%;
   height: fit-content;
-  position: relative;
 }
 
 /*CONTENT TABLES*/
@@ -143,6 +141,7 @@ html {
 {
   font-weight: 800;
   font-size: 1.6rem;
+  cursor: pointer;
 }
 
 /* TABLES CONFIGURE*/
@@ -169,6 +168,8 @@ html {
 .config-modal-container
 {
   z-index: 2;
+  top: 0;
+  left: 0;
 }
 
 .config-modal
@@ -408,6 +409,7 @@ html {
 .view{
   width: 100%;
   height: 100vh;
+  position: relative;
 }
 /* Header view 1 */
 .header{
