--- a/Css/style.css
+++ b/Css/style.css
@@ -106,6 +106,7 @@ html {
 .main{
   width: 100%;
   height: fit-content;
+  align-items: start;
 }
 
 /*CONTENT TABLES*/
@@ -587,7 +588,7 @@ ul{
 /* Sidebar */
 .sidebar{
   width: 5%;
-  height: 100%;
+  min-height: 100vh;
   background-color: var(--secondary-color);
   color: white;
   transition:  linear 0.5s;
@@ -655,12 +656,20 @@ ul{
   height: 70%;
   margin-top: 5rem;
 }
+
 .list-sidebar{
   width: 100%;
   height: 17.5%;
   display: flex;
   align-items: center;
 }
+
+.list-sidebar.active 
+{
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+}
+
 .about{
   font-size: 1.5rem;
   display: flex;
@@ -669,15 +678,18 @@ ul{
   align-items: center;
   padding-left: 2rem;
 }
-.about:hover, .about:hover .icon-sidebar{
+
+.list-sidebar:not(.active):hover, .list-sidebar:hover i{
   background-color: var(--primary-color);
   cursor: pointer;
   color: var(--secondary-color);
 }
+
 .name-sidebar-items{
   padding-left: 1.5rem;
   font-size: 1.5rem;
 }
+
 .sidebar-width{
   width: 20%;
 }
