--- a/Css/style.css
+++ b/Css/style.css
@@ -659,12 +659,12 @@ ul{
 
 .list-sidebar{
   width: 100%;
-  height: 17.5%;
   display: flex;
   align-items: center;
+  padding: 36px 0; 
 }
 
-.list-sidebar.active 
+.list-sidebar.active, .list-sidebar.active i
 {
   background-color: var(--primary-color);
   color: var(--secondary-color);
