--- a/Css/style.css
+++ b/Css/style.css
@@ -519,6 +519,7 @@ html {
 }
 .user-password{
   margin-top: 24px;
+  position: relative;
 }
 .btn-form{
   margin-top: 40px;
@@ -545,7 +546,18 @@ html {
   opacity: 0.8;
   cursor: pointer;
 }
-
+/* show hide password */
+/* icon show hide password */
+#toggle-password{
+  position: absolute;
+  bottom: 2%;
+  right: 0%;
+  color: var(--desc-color);
+  font-size: 2rem;
+}
+#toggle-password:hover{
+  cursor: pointer;
+}
 
 /* View 1 */
 .view{
