--- a/Css/style.css
+++ b/Css/style.css
@@ -186,11 +186,14 @@ html {
 }
 
 /*CONTENT TABLES*/
+span.table-sub-text {
+  color: rgb(104 89 89 / 44%);
+  font-size: 2rem;
+}
 .overview{
   font-size: 2.5rem;
   font-weight: 500;
   color: var(--color-text);
-
 }
 .content-table
 {
@@ -230,6 +233,7 @@ html {
   font-size: 1.4rem;
   width: 100%;
   text-align: left;
+  margin: 0 4px;
 }
 
 .table-title
@@ -595,6 +599,7 @@ html {
   width: 100%;
   height: 100vh;
   position: relative;
+  overflow: overlay;
 }
 /* Header view 1 */
 .header{
@@ -1000,3 +1005,29 @@ ul{
 .container.small button#config-btn {
   margin: 0;
 }
+
+/*************** Check bil ************/
+.check .config-modal
+{
+  justify-content: flex-start;
+}
+
+.check .check-body
+{
+  width: 100%;
+  height: 70%;
+  overflow-y: scroll;  
+}
+
+.check .check-header
+{
+  font-size: 3rem;
+  font-weight: 800;
+  padding-bottom: 40px;
+}
+
+.check-footer {
+  background-color: red;
+  margin-top: 12px;
+}
+
