--- a/Css/style.css
+++ b/Css/style.css
@@ -120,6 +120,8 @@ html {
   width: 60%;
   height: 120px;
   border-radius: 15px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .searching-bar {
@@ -1031,3 +1033,65 @@ ul{
   margin-top: 12px;
 }
 
+/* PERIOD DETAIL */
+.period-detail {
+  position: absolute;
+  padding: 2px 8px;
+  font-size: 1rem;
+  border-radius: 100%;
+  top: -10px;
+  left: 60%;
+  color: white;
+  background-color: rgb(104 89 89);
+  cursor: pointer;
+}
+
+.period-detail-modal {
+  background-color: rgb(104 89 89 / 44%);
+  padding: 8px 20px;
+  position: absolute;
+  right: 20px;
+  top: -120px;
+  font-size: 1.2rem;
+  display: none;
+}
+
+.period-detail:hover .period-detail-modal
+{
+  display: unset;
+}
+
+.content-table-head.table-col[name=DAYPERIOD]
+{
+  position: relative;
+}
+
+/* REFRESH BTN */
+.refresh-btn
+{
+  height: 100%;
+  justify-content: flex-start;
+}
+
+.refresh-btn .btn {
+  font-size: 1.2rem;
+  padding: 8px 12px;
+}
+
+/* SUB OPTION FOR TIMETABLE */
+.another-tool-bar {
+  width: 100%;
+}
+
+.date-option-container .searching-input
+{
+  padding: 8px 4px;
+  border: unset;
+}
+
+.date-search-btn {
+  padding: 4px;
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin-left: 4px;
+}
