--- a/Css/style.css
+++ b/Css/style.css
@@ -1067,13 +1067,22 @@ ul{
 }
 
 /* REFRESH BTN */
-.refresh-btn
+.sub-btn-container
 {
   height: 100%;
   justify-content: flex-start;
 }
 
-.refresh-btn .btn {
+.sub-btn-container .refresh-btn{
+  font-size: 1.2rem;
+  padding: 8px 12px;
+  background-color: rgb(104 89 89);
+}
+
+/* VALID TIMETABLE BTN  */
+.sub-btn-container .valid-TB-btn
+{
+  margin-left: 12px;
   font-size: 1.2rem;
   padding: 8px 12px;
 }
@@ -1094,4 +1103,15 @@ ul{
   font-size: 1.2rem;
   font-weight: 500;
   margin-left: 4px;
+}
+
+/* OBJECT NOTE  */
+.object-note-text {
+  position: absolute;
+  background-color: rgb(104 89 89 / 44%);
+  font-size: 1rem;
+  width: 10vw;
+  padding: 4px;
+  text-align: center;
+  overflow-wrap: break-word;
 }
